--- a/product/templates/product/products.html
+++ b/product/templates/product/products.html
@@ -3,11 +3,6 @@
 
 {% block title %}Product List{% endblock %}
 
-{% block styles %}
-    {{ block.super }}
-    <link rel="stylesheet" href="{% static 'css/main.css' %}">
-{% endblock %}
-
 {% block container %}
 
     <h1>Product List</h1>
@@ -15,7 +10,7 @@
         <div>
                 {% for product in products %}
                     <h2>{{ product.name }}</h2>
-                    <img src="/media/{{ product.images.all.0 }}" alt="{{  product.name }}" width="150">
+                    <img src="/media/{{ product.images.all.0 }}" alt="{{  product.name }}">
                     <p>{{ product.images.all.0 }}</p>
                     <p>{{ product.description }}</p>
                     <p>Cena: <b>{{ product.price }}</b></p>
