--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
 
     {% block styles %}
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/main.css' %}">
     {% endblock %}
 
     {% block scripts %}
@@ -23,9 +24,16 @@
 
 {%  include 'partials/nav.html' %}
 
-{% block container %}
-
-{% endblock %}
+<div class="container">
+    <div class="row">
+        <div class="col-12 col-md-8">
+            {% block container %}{% endblock %}
+        </div>
+        <div class = "col-12 col-md-4">
+            {% block aside %}Aside{% endblock %}
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
