--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>💰 Alegrosz - {%  block title %}{% endblock %}</title>
+    <title>💰 Alegrosz - {% block title %}{% endblock %}</title>
 
     {% block styles %}
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
@@ -22,15 +22,15 @@
 
 {% block header %}{% endblock %}
 
-{%  include 'partials/nav.html' %}
+{% include 'partials/nav.html' %}
 
-<div class="container">
+<div class="container mt-3">
     <div class="row">
         <div class="col-12 col-md-8">
             {% block container %}{% endblock %}
         </div>
-        <div class = "col-12 col-md-4">
-            {% block aside %}Aside{% endblock %}
+        <div class="col-12 col-md-4">
+            {% block aside %}{% endblock %}
         </div>
     </div>
 </div>
