--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -17,6 +17,9 @@
           <a class="nav-link" href="{% url 'product:product_list' %}">Products</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="{% url 'product:add_product' %}">Add Product</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="{% url 'contact:contact' %}">Contact</a>
         </li>
       </ul>
